--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,7 @@ header h1{
 	padding-top: 25px;
 	padding-bottom: 60px;
 	width: 40%;
-	overflow: auto;
+	/*overflow: auto;*/
 	box-sizing: border-box;
 }
 
