--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ header h1, footer h1{
 .menu a:hover, footer a:hover
 {
 	color: var(--dark);
-	font-weight: 600;
+	font-weight: 500;
 }
 
 /* Divider line */
@@ -105,7 +105,7 @@ header h1{
 /* Highlight current page in nav */
 .menu li.active a{
 	color: var(--dark);
-	font-weight: 600;
+	font-weight: 500;
 }
 
 .menu ul{
@@ -345,17 +345,17 @@ footer a
 
 /***************** Resume ******************/
 
-#resume ul{
+#resume ul, #projects ul{
 	padding-left: 20px;
 	margin-bottom: 0;
 	margin-top: 0;
 }
 
-#resume li.last-of-type{
+#resume li.last-of-type, #projects li.last-of-type{
 	padding-bottom: 0;
 }
 
-#resume li{
+#resume li, #projects ul{
 	color: var(--dark);
 	padding-bottom: 10px;
 	font-size: 18px;
@@ -366,7 +366,7 @@ footer a
 	margin-bottom: 0;
 }
 
-#resume h2 {
+#resume h2, #projects h2 {
 	font-size: 18px;
 	color: var(--medium);
 	font-weight: 500;
@@ -382,11 +382,11 @@ footer a
 	border-bottom: 1px solid var(--dark);
 }
 
-#resume a:hover{
-	text-decoration: none;
+#resume a:hover, #projects a:hover{
+	border-bottom: none;
 }
 
-#resume h1{
+#resume h1, #projects h1{
 	color: var(--medium);
 
 	word-spacing: 8px;
@@ -395,10 +395,9 @@ footer a
 	text-align: center;
 	margin-bottom: 20px;
 	font-weight: 600;
-
 }
 
-.resumeHeading{
+.resumeHeading, #projects h3{
 	color: var(--dark);
 	font-size: 18px;
 	font-weight: 600;
@@ -421,7 +420,7 @@ footer a
 	line-height: 30px;
 }
 
-.downloadButton{
+.downloadButton, .githubButton{
 	color: white;
 	font-size: 16px;
 	word-spacing: 2px;
@@ -441,7 +440,7 @@ footer a
 	border: none;
 }
 
-.downloadButton:hover{
+.downloadButton:hover, .githubButton:hover{
 	background-color: var(--dark);
 }
 
@@ -472,7 +471,7 @@ footer a
 	/*box-shadow: 2px 3px var(--gray);*/
 }
 
-#projects h2{
+#projectsSection h2{
 	position: relative;
 	z-index: 1;
 	color: white;
@@ -483,7 +482,7 @@ footer a
 	word-spacing: 2px;
 }
 
-#projects a{
+#projectsSection a{
 	text-decoration: none;
 }
 
@@ -530,7 +529,7 @@ footer a
 #resumeSidebar{
 	text-align: right;
 	position: fixed;
-	top: 35%;
+	top: 50%;
 	right: 2%;
 	margin-top: 5px;
 	width: 15%;
@@ -569,6 +568,39 @@ footer a
 section:target{
 	padding-top: 36px;
 	margin-top: -36px;
+}
+
+/**************** Projects Page ****************/
+#projects h2{
+	text-align: center;
+	margin-top: 0;
+}
+
+#projects h1{
+	margin-bottom: 10px;
+	text-align: center;
+}
+
+#projects h3{
+	margin-bottom: 0;
+	padding-top: 10px;
+}
+
+#projects a{
+	color: var(--medium);
+	border-bottom: 1px solid var(--medium);
+}
+
+#projects img{
+	margin-top: 20px;
+}
+
+.githubButton {
+	margin-top: 20px;
+	margin-bottom: 0;
+  margin-left: auto;
+	margin-right: auto;
+	display: block;
 }
 
 /**************** Responsive Resume Sidebar ****************/
@@ -1103,7 +1135,8 @@ footer h1 {
 		padding-bottom: 20px;
 	}
 
-	#home .pgTitleBlock, #resumeTitle .pgTitleBlock, #contact .pgTitleBlock{
+	#home .pgTitleBlock, #resumeTitle .pgTitleBlock, #contact .pgTitleBlock,
+	#projectsTitle .pgTitleBlock{
 		margin-top:35px;
 		background-position: center;
 	}
@@ -1147,7 +1180,7 @@ footer h1 {
 		padding-bottom: 20%;
 	}
 
-	#projects h2{
+	#projectsSection h2{
 		margin-top: 0;
 		margin-bottom: 0;
 	}
