Added jumbotron img for Projects. Compressed img in Projects.

--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,11 @@ header h1{
 		background-position: 0 -300px;
 }
 
+#projectsTitle .pgTitleBlock{
+	background-image: url('../img/jumbotron/projectsJumbotron.jpg');
+	background-position: 0 -300px;
+}
+
 /*
 #contact .pgTitleBlock{
 		background-image: url('../img/homeJumbotron.jpg');
@@ -337,10 +342,16 @@ footer a
 	/*word-spacing: 2px;
 	letter-spacing: 3px;*/
 	line-height: 30px;
+	margin-bottom: 18px;
 }
 
 #about-writing .mainContent{
 	padding-top: 10px;
+}
+
+#about-writing p{
+	margin-top: 0;
+	margin-bottom: 15px;
 }
 
 /***************** Resume ******************/
@@ -610,6 +621,8 @@ section:target{
 #projects figure{
 	margin-left: 0;
 	margin-right: 0;
+	margin-top: 35px;
+	margin-bottom: 20px;
 }
 
 #projects figure img{
@@ -623,6 +636,7 @@ section:target{
 	margin-top: 10px;
 	color: var(--dark);
 }
+
 
 /**************** Responsive Resume Sidebar ****************/
 .circle{
@@ -965,19 +979,28 @@ footer h1 {
 
 		padding-top: 70px;
 		padding-bottom: 70px;
-		padding-left: 20px;
-		padding-right: 20px;
+
 	}
 
 	.pgTitleBlock h1
 	{
-		text-align: center;
+		margin: 0 auto 0 auto;
 		font-size: 40px;
 		text-shadow: 2px 2px var(--medium);
+		letter-spacing: 15px;
+		word-spacing: 0;
+		padding-left: 20px;
+		padding-right: 20px;
 	}
 
-	#home .pgTitleBlock, #resumeTitle .pgTitleBlock, #contact .pgTitleBlock{
+	#home .pgTitleBlock, #resumeTitle .pgTitleBlock, #contact .pgTitleBlock,
+	#projectsTitle .pgTitleBlock{
 		background-position: center;
+	}
+
+	#projectsTitle .pgTitleBlock h1{
+		padding-right: 10px;
+		padding-left: 20px;
 	}
 
 /*About: Bullets */
@@ -1125,6 +1148,11 @@ footer h1 {
 		margin-top: 10px;
 	}
 
+	/*Projects*/
+	#projects figure{
+		margin-top: 10px;
+  }
+
 }
 
 
@@ -1179,7 +1207,8 @@ footer h1 {
 /*Update position of background image on Home*/
 @media all and (min-width: 1050px) and (max-width:1360px) {
 
-	#resumeTitle .pgTitleBlock, #home .pgTitleBlock, #contact .pgTitleBlock{
+	#resumeTitle .pgTitleBlock, #home .pgTitleBlock, #contact .pgTitleBlock,
+	#projectsTitle .pgTitleBlock{
 		background-position: 0 -150px;
 	}
 }
