--- a/css/style.css
+++ b/css/style.css
@@ -661,7 +661,7 @@ section:target{
 
 #projects figure img{
 	margin-left: auto;
-	margin-right:auto;
+	margin-right: auto;
 	display: block
 }
 
@@ -669,6 +669,16 @@ section:target{
 	text-align: center;
 	margin-top: 10px;
 	color: var(--dark);
+}
+
+#projects .descriptionImg{
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	width: 80%;
+	height: 300px;
+	object-fit: cover;
+	border: 3px solid var(--medium);
 }
 
 /**************** Photography  ****************/
