Finally fixed scss errors due to Gulp.js.

--- a/website_v2/_includes/head.html
+++ b/website_v2/_includes/head.html
@@ -4,5 +4,6 @@
 
   <title>{{site.title}} | {{page.title}}</title>
 
-  <link rel = "stylesheet" href = "assets/css/main.css">
+  <link rel = "stylesheet" href = "/assets/css/main.css">
+
 </head>
