--- a/website_v2/_sass/_general.scss
+++ b/website_v2/_sass/_general.scss
@@ -1,7 +1,15 @@
+// Variables
+$gray: #686F71;
+$medium: #7D9AB0;
+$dark: #253542;
+$accent: #BE6E46; //#DF9A57
+
+// Navigation Bar
 nav .li .active{
 
 }
 
+// Jumbotron
 .jumbotron{
 
 }
@@ -9,3 +17,7 @@ nav .li .active{
 .darkenOverlay{
 
 }
+
+// Main Content
+
+// Footer
