--- a/website_v2/_sass/main.scss
+++ b/website_v2/_sass/main.scss
@@ -1,2 +1,7 @@
-@import "general";
 @import "reset";
+@import "general";
+@import "common";
+@import "home";
+@import "jumbotron";
+@import "responsive-common";
+@import "responsive-pages";
