--- a/website_v2/_includes/footer.html
+++ b/website_v2/_includes/footer.html
@@ -3,11 +3,13 @@
   <!-- Mobile Version -->
   <div class = "socialIcons">
 
-    {% for item in site.data.social %}
-    <a href = "{{ item.link }}">
-      <i class = "{{ item.icon }}" title = "{{ item.name }}"></i>
-    </a>
-    {% endfor %}
+    <ul>
+      {% for item in site.data.social %}
+      <li><a href = "{{ item.link }}">
+        <i class = "{{ item.icon }}" title = "{{ item.name }}"></i>
+      </a></li>
+      {% endfor %}
+    </ul>
 
     <h1>Website by Stephanie Yip 2018</h1>
   </div>
