--- a/website_v2/_includes/jumbotron.html
+++ b/website_v2/_includes/jumbotron.html
@@ -1,5 +1,8 @@
-<div class = "jumbotron">
-  <div class = "darkenOverlay"</div>
-    <!-- <img src = "{{ page.jumbotron }}"></img> -->
+<div class = "jumbotron" id = "{{ page.jumbotron }}">
+  <div class = "darkenOverlay"></div>
+    {% if page.title == "Home" %}
+    <h1>Hello</h1>
+    {% else %}
     <h1>{{ page.title }}</h1>
+    {% endif %}
 </div>
