--- a/website_v2/_layouts/default.html
+++ b/website_v2/_layouts/default.html
@@ -6,7 +6,7 @@
   {% include header.html %}
   {% include jumbotron.html %}
 
-    <main>
+    <main class = "container">
       {{ content }}
     </main>
 
