--- a/website_v2/_sass/_general.scss
+++ b/website_v2/_sass/_general.scss
@@ -37,8 +37,8 @@ body {
 .container{
   box-sizing: border-box;
   width: 60%;
-  margin: 40px auto auto auto;
-  padding-bottom: 40px;
+  margin: auto;
+  padding: 60px 0 60px 0;
   line-height: 22px;
 
   h1 {
