--- a/website_v2/_sass/_jumbotron.scss
+++ b/website_v2/_sass/_jumbotron.scss
@@ -1,13 +1,13 @@
 .jumbotron{
   margin-top: 45px;
-  padding-top: 150px;
-  padding-bottom: 150px;
-  display: block;
+  padding: 150px 0 150px 0;
+  // display: block;
   background-size: 100% auto;
   background-repeat: no-repeat;
   position: relative;
 
   h1 {
+    margin: 0 auto;
     text-align: center;
     color: white;
     font-size: 70px;
