Refactored code before working on the rest of the pages.

--- a/website_v2/_includes/footer.html
+++ b/website_v2/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
 
   <!-- Mobile Version -->
-  <div class = "socialIcons">
+  <div class = "social-icons">
 
     <ul>
       {% for item in site.data.social %}
@@ -15,7 +15,7 @@
   </div>
 
   <!-- Desktop Version  -->
-  <div class = "socialLinks">
+  <div class = "social-links">
     <h1>Website by Stephanie Yip 2018</h1>
     <ul>
       {% for item in site.data.social %}
