--- a/website_v2/_includes/jumbotron.html
+++ b/website_v2/_includes/jumbotron.html
@@ -1,5 +1,5 @@
 <div class = "jumbotron" id = "{{ page.jumbotron }}">
-  <div class = "darkenOverlay"></div>
+  <div class = "darken-overlay"></div>
     {% if page.title == "Home" %}
     <h1>Hello</h1>
     {% else %}
