--- a/website_v2/_sass/_general.scss
+++ b/website_v2/_sass/_general.scss
@@ -5,9 +5,10 @@ $grayOpacity: rgba(133,133,133, 0.3);
 $medium: #7D9AB0;
 $mediumOpacity: rgba(125,154,176, 0.9);
 $dark: #253542;
-$accent: #edc59e; //#CC8B86; //#DF9A57;
+$accent: #edc59e;
 $darkAccent: #e4ab74;
 
+// Fonts
 $titleSize: 20px;
 $copySize: 16px;
 $main-fonts: 'Raleway', Helvetica, Arial, sans-serif;
@@ -62,4 +63,19 @@ body {
 
 .highlight {
   font-weight: 700;
+}
+
+%link-hover {
+  color: $accent;
+  text-shadow: 0 3px $lightGray;
+}
+
+// Text in header + footer
+%outer-text {
+  text-decoration: none;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  font-size: 14px;
+  display: inline;
 }
