--- a/website_v2/_sass/_jumbotron.scss
+++ b/website_v2/_sass/_jumbotron.scss
@@ -1,7 +1,6 @@
 .jumbotron{
   margin-top: 45px;
   padding: 150px 0 150px 0;
-  // display: block;
   background-size: 100% auto;
   background-repeat: no-repeat;
   position: relative;
@@ -21,7 +20,7 @@
   }
 }
 
-.darkenOverlay{
+.darken-overlay{
   top: 0;
 	left: 0;
 	right: 0;
