--- a/website_v2/_sass/main.scss
+++ b/website_v2/_sass/main.scss
@@ -1,6 +1,7 @@
 @import "reset";
 @import "general";
-@import "common";
+@import "header";
+@import "footer";
 @import "home";
 @import "jumbotron";
 @import "responsive-common";
